preventing overflow scrolling

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,6 +11,12 @@
     display: none;
 }
 
+/*placed here to prevent overflow  */
+body {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 h1 {
     color: var(--light);
 }
@@ -36,18 +42,6 @@ h1 {
     background-color: var(--button) ;
 }
 
-header {
-    display: block;
-    width: 100%;
-    height: 40px;
-    background-color: var(--button);
-}
-
-.header-title {
-    padding-top: 7px;
-    text-align: center;
-}
-
 /* Parameters */
 .parameter-question {
     font-weight: 600;
@@ -57,11 +51,7 @@ header {
 
 #select-options {
     width: 100%;
-    position: absolute;
     text-align: center;
-    padding-bottom: 30px;
-    margin-left: 5%;
-    margin-right: 5%;
 }
 
 label {
@@ -107,10 +97,10 @@ select {
 }
 
 input.box {
-      margin-right: 5px;
+    margin-right: 5px;
 }
 
-.content {
+.content-perams {
     display: none;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
@@ -150,4 +140,3 @@ input.box {
     background-repeat: none;
     filter: contrast(70%) brightness(40%);
 }
-
